--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "next": "^14.2.0",
-    "gsap": "^3.12.5",
     "chart.js": "^4.4.1",
-    "react-chartjs-2": "^5.2.0"
+    "gsap": "^3.12.5",
+    "next": "^14.2.35",
+    "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "eslint": "^8.57.0",
