--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@types/node": "25.2.1",
+    "@types/react": "19.2.13",
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.2.0"
   }
